<resources>
    <string name="app_name" translatable="false">WaterlooBridge</string>

    <string name="follow_animation" translatable="false">关注动画</string>
    <string name="draw_small_icon" translatable="false">绘制小icon</string>
    <string name="custom_widget" translatable="false">自定义widget</string>
    <string name="popup_layer" translatable="false">弹窗</string>
    <string name="view_pager" translatable="false">ViewPager</string>
    <string name="view_pager2" translatable="false">ViewPager2</string>
    <string name="lazy_view_pager" translatable="false">LazyViewPager</string>
    <string name="music" translatable="false">Music</string>
    <string name="camerax" translatable="false">CameraX</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>

    <string name="desc_follow_animation" translatable="false">FollowAnimationActivity: Animation/Animator贝塞尔曲线动画, ListView/SwipeRefreshLayout - 下拉刷新, LayoutAnimationController - ViewGroup动画</string>

    <string name="dog" translatable="false">泰迪犬</string>
    <string name="drink" translatable="false">脉动 维生素饮料 仙人掌青橘口味 探索沙漠神秘绿洲，犹如满水回复，开启活力探险</string>

    <string name="car_level_minicar" translatable="false">微型车</string>
    <string name="car_level_xiaoxingche" translatable="false">小型车</string>
    <string name="car_level_jincouxingche" translatable="false">紧凑型车</string>
    <string name="car_level_midsize_car" translatable="false">中型车</string>
    <string name="car_level_zhongdaxingche" translatable="false">中大型车</string>
    <string name="car_level_mpv" translatable="false">MPV</string>
    <string name="car_level_suv" translatable="false">SUV</string>
    <string name="car_level_new_energy" translatable="false">新能源</string>

    <string name="serial_follow_guide" translatable="false">加入清单优惠降价早知道</string>
    <string name="select_car_inventory_entry_guide" translatable="false">你关注的车搬到这里了哦</string>
    <string name="web_service_and_privacy_policy_updated" translatable="false">网络服务协议和隐私政策有更新，请您查看并同意，以便更好的行驶权利及保护个人信息</string>
    <string name="web_service_agreement" translatable="false">网络服务协议</string>
    <string name="privacy_policy" translatable="false">隐私政策</string>
    <string name="agree">同意</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="no_music" translatable="false">请先在\n/storage/emulated/0/Music/Favourite/\n添加音乐</string>
    <string name="loop">循环</string>
    <string name="single_song">单曲</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>

    <string name="desc_elevation" translatable="false">测试elevation属性</string>
    <string name="undo" translatable="false">undo</string>

    <string name="take_photo" translatable="false">Take Photo</string>
    <string name="start_capture" translatable="false">Start Capture</string>
    <string name="stop_capture" translatable="false">Stop Capture</string>
</resources>
