<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:id="@+id/horizontal_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadingEdge="none"
    android:scrollbars="none">

    <RadioGroup
        android:id="@+id/horizontal_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn00"
            style="@style/paihang_brand_comm_tab_btn"
            android:checked="true"
            android:text="@string/car_level_jincouxingche"/>

        <RadioButton
            android:id="@+id/btn01"
            style="@style/paihang_brand_comm_tab_btn"
            android:text="@string/car_level_suv" />

        <RadioButton
            android:id="@+id/btn02"
            style="@style/paihang_brand_comm_tab_btn"
            android:text="@string/car_level_new_energy" />

        <RadioButton
            android:id="@+id/btn03"
            style="@style/paihang_brand_comm_tab_btn"
            android:text="@string/car_level_minicar"/>

        <RadioButton
            android:id="@+id/btn04"
            style="@style/paihang_brand_comm_tab_btn"
            android:text="@string/car_level_xiaoxingche"/>

        <RadioButton
            android:id="@+id/btn05"
            style="@style/paihang_brand_comm_tab_btn"
            android:text="@string/car_level_midsize_car"/>

        <RadioButton
            android:id="@+id/btn06"
            style="@style/paihang_brand_comm_tab_btn"
            android:text="@string/car_level_zhongdaxingche"/>

        <RadioButton
            android:id="@+id/btn07"
            style="@style/paihang_brand_comm_tab_btn"
            android:text="@string/car_level_mpv"/>
    </RadioGroup>
</HorizontalScrollView>