<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_play"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_stop"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:text="@string/pause"
        tools:text="@string/play"/>

    <TextView
        android:id="@+id/tv_stop"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/tv_play"
        app:layout_constraintRight_toLeftOf="@id/tv_previous"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:text="停止"/>

    <TextView
        android:id="@+id/tv_previous"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/tv_stop"
        app:layout_constraintRight_toLeftOf="@id/tv_next"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:text="上一首"/>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/tv_previous"
        app:layout_constraintRight_toLeftOf="@id/tv_loop"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:text="下一首"/>

    <TextView
        android:id="@+id/tv_loop"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/tv_next"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:text="@string/single_song"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:maxHeight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_play"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:progressDrawable="@drawable/bg_progress_bar"
        android:max="1000"
        android:progress="0"
        android:secondaryProgress="1000"
        tools:progress="200"
        tools:secondaryProgress="300"/>

    <!-- layout_constraintGuide_percent覆盖layout_constraintGuide_begin -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <View
        android:id="@+id/view_pointer"
        android:layout_width="1px"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@id/progress_bar"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        android:background="@android:color/black" />

    <!--style="@android:style/Widget.DeviceDefault.SeekBar"-->
    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        android:layout_marginTop="20dp"
        android:min="0"
        android:max="1000"
        android:progress="0"
        android:secondaryProgress="1000"
        tools:progress="200"
        tools:secondaryProgress="500"
        android:minHeight="5dp"
        android:maxHeight="5dp"
        android:progressDrawable="@drawable/bg_progress_bar"
        android:thumb="@drawable/shape_circle"/>

    <!-- 设置高度类比ScrollView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/white"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/no_music"/>

    <ImageView
        android:id="@+id/iv_clip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar"
        android:src="@drawable/clip_img"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>